objects/TAV4__Alignment_Update_Detail__c.object
<CustomObject>
    <description>Individual account, lead, geo unit or rep assignments for an alignment update.</description>
    <fields>
        <fullName>TAV4__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Alignment Update Details</relationshipLabel>
        <relationshipName>Alignment_Update_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TAV4__Alignment_Update__c</fullName>
        <label>Alignment Update</label>
        <referenceTo>TAV4__Alignment_Update__c</referenceTo>
        <relationshipLabel>Alignment Update Details</relationshipLabel>
        <relationshipName>Alignment_Update_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>TAV4__Geo_Unit__c</fullName>
        <label>Geo Unit</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAV4__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Alignment Update Details</relationshipLabel>
        <relationshipName>Alignment_Update_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TAV4__Sales_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The sales area that the unit is to be assigned to.</inlineHelpText>
        <label>Sales Area</label>
        <referenceTo>TAV4__Sales_Area__c</referenceTo>
        <relationshipLabel>Alignment Update Details</relationshipLabel>
        <relationshipName>Alignment_Update_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TAV4__Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>TAV4__Sales_Rep__c</referenceTo>
        <relationshipLabel>Alignment Update Details</relationshipLabel>
        <relationshipName>Alignment_Update_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Alignment Update Detail</label>
    <nameField>
        <displayFormat>AUD-{00000000}</displayFormat>
        <label>Alignment Update Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alignment Update Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>